# LibSmoke

./: .gitignore  README.md
Documentation/: Title.tex
Documentation/Sections/: 0_Packages.tex  1_Abstract.tex  2_Introduction.tex  3_Design_and_Implementation.tex  6_Latex_Examples.tex
Project/libs/polarssl/: Makefile
Project/libs/polarssl/include/polarssl/: entropy_poll.h
Project/libs/polarssl/src/: miosix_poll.cc
Project/libs/sban/: Makefile
Project/libs/sban/include/sban/: KnxTpUart.h
Project/libs/sban/src/: gdh2.c  mka.c
Project/libsmoke/: CMakeLists.txt
Project/libsmoke/include/libsmoke/: client_smoke.h  libsmoke_client.h  libsmoke_server.h  server_smoke.h
Project/libsmoke/libs/sknx/: CMakeLists.txt  Makefile
Project/libsmoke/libs/sknx/config/: Makefile.inc
Project/libsmoke/libs/sknx/libs/polarssl/include/polarssl/: config.h
Project/libsmoke/libs/sknx/libs/polarssl/src/: aes.c  aesni.c  bignum.c  ctr_drbg.c  ecp.c  ecp_curves.c  entropy.c  entropy_poll.c  miosix_poll.cc  net.c  platform.c  sha512.c  timing.c
Project/libsmoke/libs/sknx/libs/sban/include/sban/: common.h  gdh2.h  mka.h  util.h
Project/libsmoke/libs/sknx/libs/sban/src/: bd1.c  bd2.c  gdh2.c  mka.c  util.c
Project/libsmoke/libs/sknx/src/shared/knx/: common.h  config.h  knx.h  pktwrapper.h  timing.h
Project/libsmoke/libs/sknx/src/shared/knx/backend/: backend.h  linux-tcp.h  linux-tpuart.h
Project/libsmoke/libs/sknx/src/shared/knx/crypto/: bd2_utils.h  crypto.h  dummy.h  gdh2.h  mka.h  policies.h
Project/libsmoke/libs/sknx/src/shared/knx/nodecounter/: counter.h  dummy.h
Project/libsmoke/libs/sknx/tests/x86/: Makefile
Project/libsmoke/libs/sknx/tests/x86/new/: Makefile  bcast_server.cc  client.cc
Project/libsmoke/libs/tiny-AES-c-master/: CMakeLists.txt
Project/libsmoke/src/: libsmoke_client.cpp  libsmoke_client.h  libsmoke_server.c  libsmoke_server.cpp  libsmoke_server.h
Project/libsmoke/tests/: client_test.cpp  connection_data.h  server_test.cpp
Project/sknx/: .gitignore  .gitmodules  CMakeLists.txt
Project/sknx/libs/polarssl/include/polarssl/: miosix_poll.h
Project/sknx/libs/polarssl/src/: entropy.c
Project/sknx/libs/sban/include/sban/: KnxTelegram.h  bd1.h  bd2.h  common.h
Project/sknx/libs/sban/src/: bd1.c  bd2.c  util.c
Project/sknx/src/: Makefile
Project/sknx/src/shared/knx/: common.h  debug.h  knx.h  multirings.h  pktwrapper.h  ringbuffer.h  telegram.h
Project/sknx/src/shared/knx/backend/: linux-tcp.h  linux-tpuart.h  linux-uart.h  miosix-stm32-usart.h  miosix-tpuart.h
Project/sknx/src/shared/knx/crypto/: bd1.h  bd2.h  gdh2_utils.h
Project/sknx/src/shared/knx/nodecounter/: dummy.h
Project/sknx/tests/: Makefile
Project/sknx/tests/x86/new/: client.cc  common.h  uart-client.cc
