cmake_minimum_required(VERSION 3.13)
project(sknx)

set(CMAKE_CXX_STANDARD 14)

include_directories(config)
include_directories(config/arch)
include_directories(config/arch/arm7_lpc2000)
include_directories(config/arch/arm7_lpc2000/lpc2138_miosix_board)
include_directories(config/arch/cortexM3_efm32gg)
include_directories(config/arch/cortexM3_efm32gg/efm32gg332f1024_wandstem)
include_directories(config/arch/cortexM3_stm32)
include_directories(config/arch/cortexM3_stm32/stm32f100cb_tempsensor)
include_directories(config/arch/cortexM3_stm32/stm32f100rb_stm32vldiscovery)
include_directories(config/arch/cortexM3_stm32/stm32f100rc_solertegiard)
include_directories(config/arch/cortexM3_stm32/stm32f103cb_als_mainboard_rev2)
include_directories(config/arch/cortexM3_stm32/stm32f103ve_mp3v2)
include_directories(config/arch/cortexM3_stm32/stm32f103ve_strive_mini)
include_directories(config/arch/cortexM3_stm32/stm32f103ze_redbull_v2)
include_directories(config/arch/cortexM3_stm32/stm32f103ze_stm3210e-eval)
include_directories(config/arch/cortexM3_stm32f2)
include_directories(config/arch/cortexM3_stm32f2/stm32f205rc_skyward_stormtrooper)
include_directories(config/arch/cortexM3_stm32f2/stm32f205rg_sony-newman)
include_directories(config/arch/cortexM3_stm32f2/stm32f207ig_stm3220g-eval)
include_directories(config/arch/cortexM3_stm32f2/stm32f207ze_als_camboard)
include_directories(config/arch/cortexM3_stm32f2/stm32f207zg_EthBoardV2)
include_directories(config/arch/cortexM3_stm32l1)
include_directories(config/arch/cortexM3_stm32l1/stm32l151c8_als_mainboard)
include_directories(config/arch/cortexM4_stm32f4)
include_directories(config/arch/cortexM4_stm32f4/stm32f401vc_stm32f4discovery)
include_directories(config/arch/cortexM4_stm32f4/stm32f407vg_bitsboard)
include_directories(config/arch/cortexM4_stm32f4/stm32f407vg_stm32f4discovery)
include_directories(config/arch/cortexM4_stm32f4/stm32f411re_nucleo)
include_directories(config/arch/cortexM4_stm32f4/stm32f429zi_oledboard2)
include_directories(config/arch/cortexM4_stm32f4/stm32f429zi_skyward_anakin)
include_directories(config/arch/cortexM4_stm32f4/stm32f429zi_stm32f4discovery)
include_directories(libs/polarssl/include)
include_directories(libs/polarssl/include/polarssl)
include_directories(libs/sban/include)
include_directories(libs/sban/include/sban)
include_directories(libs/tiny-AES-c-master)
include_directories(src)
include_directories(src/shared)
include_directories(src/shared/knx)
include_directories(src/shared/knx/backend)
include_directories(src/shared/knx/crypto)
include_directories(src/shared/knx/nodecounter)
include_directories(tests/x86/new)
include_directories(tests/x86/old)

add_executable(server
        config/arch/arm7_lpc2000/lpc2138_miosix_board/board_settings.h
        config/arch/cortexM3_efm32gg/efm32gg332f1024_wandstem/board_settings.h
        config/arch/cortexM3_stm32/stm32f100cb_tempsensor/board_settings.h
        config/arch/cortexM3_stm32/stm32f100rb_stm32vldiscovery/board_settings.h
        config/arch/cortexM3_stm32/stm32f100rc_solertegiard/board_settings.h
        config/arch/cortexM3_stm32/stm32f103cb_als_mainboard_rev2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ve_mp3v2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ve_strive_mini/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ze_redbull_v2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ze_stm3210e-eval/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f205rc_skyward_stormtrooper/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f205rg_sony-newman/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207ig_stm3220g-eval/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207ze_als_camboard/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207zg_EthBoardV2/board_settings.h
        config/arch/cortexM3_stm32l1/stm32l151c8_als_mainboard/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f401vc_stm32f4discovery/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f407vg_bitsboard/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f407vg_stm32f4discovery/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f411re_nucleo/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_oledboard2/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_skyward_anakin/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_stm32f4discovery/board_settings.h
        config/miosix_settings.h
        libs/polarssl/include/polarssl/aes.h
        libs/polarssl/include/polarssl/aesni.h
        libs/polarssl/include/polarssl/bignum.h
        libs/polarssl/include/polarssl/bn_mul.h
        libs/polarssl/include/polarssl/check_config.h
        libs/polarssl/include/polarssl/config.h
        libs/polarssl/include/polarssl/ctr_drbg.h
        libs/polarssl/include/polarssl/ecp.h
        libs/polarssl/include/polarssl/entropy.h
        libs/polarssl/include/polarssl/entropy_poll.h
        libs/polarssl/include/polarssl/miosix_poll.h
        libs/polarssl/include/polarssl/net.h
        libs/polarssl/include/polarssl/padlock.h
        libs/polarssl/include/polarssl/platform.h
        libs/polarssl/include/polarssl/sha512.h
        libs/polarssl/include/polarssl/timing.h
        libs/polarssl/src/aes.c
        libs/polarssl/src/aesni.c
        libs/polarssl/src/bignum.c
        libs/polarssl/src/ctr_drbg.c
        libs/polarssl/src/ecp.c
        libs/polarssl/src/ecp_curves.c
        libs/polarssl/src/entropy.c
        libs/polarssl/src/entropy_poll.c
        libs/polarssl/src/miosix_poll.cc
        libs/polarssl/src/net.c
        libs/polarssl/src/platform.c
        libs/polarssl/src/sha512.c
        libs/polarssl/src/timing.c
        libs/sban/include/sban/bd1.h
        libs/sban/include/sban/bd2.h
        libs/sban/include/sban/common.h
        libs/sban/include/sban/gdh2.h
        libs/sban/include/sban/KnxTelegram.h
        libs/sban/include/sban/KnxTpUart.h
        libs/sban/include/sban/mka.h
        libs/sban/include/sban/util.h
        libs/sban/src/bd1.c
        libs/sban/src/bd2.c
        libs/sban/src/gdh2.c
        libs/sban/src/mka.c
        libs/sban/src/util.c
        src/shared/knx/backend/backend.h
        src/shared/knx/backend/linux-tcp.h
        src/shared/knx/crypto/crypto.h
        src/shared/knx/crypto/dummy.h
        src/shared/knx/crypto/mka.h
        src/shared/knx/crypto/policies.h
        src/shared/knx/nodecounter/counter.h
        src/shared/knx/nodecounter/dummy.h
        src/shared/knx/common.h
        src/shared/knx/config.h
        src/shared/knx/debug.h
        src/shared/knx/knx.h
        src/shared/knx/multirings.h
        src/shared/knx/pktwrapper.h
        src/shared/knx/ringbuffer.h
        src/shared/knx/telegram.h
        src/shared/knx/timing.h
        tests/x86/new/bcast_server.cc
        tests/x86/new/common.h)

add_executable(client
        config/arch/arm7_lpc2000/lpc2138_miosix_board/board_settings.h
        config/arch/cortexM3_efm32gg/efm32gg332f1024_wandstem/board_settings.h
        config/arch/cortexM3_stm32/stm32f100cb_tempsensor/board_settings.h
        config/arch/cortexM3_stm32/stm32f100rb_stm32vldiscovery/board_settings.h
        config/arch/cortexM3_stm32/stm32f100rc_solertegiard/board_settings.h
        config/arch/cortexM3_stm32/stm32f103cb_als_mainboard_rev2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ve_mp3v2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ve_strive_mini/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ze_redbull_v2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ze_stm3210e-eval/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f205rc_skyward_stormtrooper/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f205rg_sony-newman/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207ig_stm3220g-eval/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207ze_als_camboard/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207zg_EthBoardV2/board_settings.h
        config/arch/cortexM3_stm32l1/stm32l151c8_als_mainboard/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f401vc_stm32f4discovery/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f407vg_bitsboard/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f407vg_stm32f4discovery/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f411re_nucleo/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_oledboard2/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_skyward_anakin/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_stm32f4discovery/board_settings.h
        config/miosix_settings.h
        libs/polarssl/include/polarssl/aes.h
        libs/polarssl/include/polarssl/aesni.h
        libs/polarssl/include/polarssl/bignum.h
        libs/polarssl/include/polarssl/bn_mul.h
        libs/polarssl/include/polarssl/check_config.h
        libs/polarssl/include/polarssl/config.h
        libs/polarssl/include/polarssl/ctr_drbg.h
        libs/polarssl/include/polarssl/ecp.h
        libs/polarssl/include/polarssl/entropy.h
        libs/polarssl/include/polarssl/entropy_poll.h
        libs/polarssl/include/polarssl/miosix_poll.h
        libs/polarssl/include/polarssl/net.h
        libs/polarssl/include/polarssl/padlock.h
        libs/polarssl/include/polarssl/platform.h
        libs/polarssl/include/polarssl/sha512.h
        libs/polarssl/include/polarssl/timing.h
        libs/polarssl/src/aes.c
        libs/polarssl/src/aesni.c
        libs/polarssl/src/bignum.c
        libs/polarssl/src/ctr_drbg.c
        libs/polarssl/src/ecp.c
        libs/polarssl/src/ecp_curves.c
        libs/polarssl/src/entropy.c
        libs/polarssl/src/entropy_poll.c
        libs/polarssl/src/miosix_poll.cc
        libs/polarssl/src/net.c
        libs/polarssl/src/platform.c
        libs/polarssl/src/sha512.c
        libs/polarssl/src/timing.c
        libs/sban/include/sban/bd1.h
        libs/sban/include/sban/bd2.h
        libs/sban/include/sban/common.h
        libs/sban/include/sban/gdh2.h
        libs/sban/include/sban/KnxTelegram.h
        libs/sban/include/sban/KnxTpUart.h
        libs/sban/include/sban/mka.h
        libs/sban/include/sban/util.h
        libs/sban/src/bd1.c
        libs/sban/src/bd2.c
        libs/sban/src/gdh2.c
        libs/sban/src/mka.c
        libs/sban/src/util.c
        libs/tiny-AES-c-master/aes.c
        libs/tiny-AES-c-master/aes.h
        libs/tiny-AES-c-master/aes.hpp
        src/shared/knx/backend/backend.h
        src/shared/knx/backend/linux-tcp.h
        src/shared/knx/crypto/crypto.h
        src/shared/knx/crypto/dummy.h
        src/shared/knx/crypto/mka.h
        src/shared/knx/crypto/policies.h
        src/shared/knx/nodecounter/counter.h
        src/shared/knx/nodecounter/dummy.h
        src/shared/knx/common.h
        src/shared/knx/config.h
        src/shared/knx/debug.h
        src/shared/knx/knx.h
        src/shared/knx/multirings.h
        src/shared/knx/pktwrapper.h
        src/shared/knx/ringbuffer.h
        src/shared/knx/telegram.h
        src/shared/knx/timing.h
        tests/x86/new/common.h
        tests/x86/new/client.cc)

add_executable(client2
        config/arch/arm7_lpc2000/lpc2138_miosix_board/board_settings.h
        config/arch/cortexM3_efm32gg/efm32gg332f1024_wandstem/board_settings.h
        config/arch/cortexM3_stm32/stm32f100cb_tempsensor/board_settings.h
        config/arch/cortexM3_stm32/stm32f100rb_stm32vldiscovery/board_settings.h
        config/arch/cortexM3_stm32/stm32f100rc_solertegiard/board_settings.h
        config/arch/cortexM3_stm32/stm32f103cb_als_mainboard_rev2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ve_mp3v2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ve_strive_mini/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ze_redbull_v2/board_settings.h
        config/arch/cortexM3_stm32/stm32f103ze_stm3210e-eval/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f205rc_skyward_stormtrooper/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f205rg_sony-newman/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207ig_stm3220g-eval/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207ze_als_camboard/board_settings.h
        config/arch/cortexM3_stm32f2/stm32f207zg_EthBoardV2/board_settings.h
        config/arch/cortexM3_stm32l1/stm32l151c8_als_mainboard/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f401vc_stm32f4discovery/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f407vg_bitsboard/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f407vg_stm32f4discovery/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f411re_nucleo/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_oledboard2/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_skyward_anakin/board_settings.h
        config/arch/cortexM4_stm32f4/stm32f429zi_stm32f4discovery/board_settings.h
        config/miosix_settings.h
        libs/polarssl/include/polarssl/aes.h
        libs/polarssl/include/polarssl/aesni.h
        libs/polarssl/include/polarssl/bignum.h
        libs/polarssl/include/polarssl/bn_mul.h
        libs/polarssl/include/polarssl/check_config.h
        libs/polarssl/include/polarssl/config.h
        libs/polarssl/include/polarssl/ctr_drbg.h
        libs/polarssl/include/polarssl/ecp.h
        libs/polarssl/include/polarssl/entropy.h
        libs/polarssl/include/polarssl/entropy_poll.h
        libs/polarssl/include/polarssl/miosix_poll.h
        libs/polarssl/include/polarssl/net.h
        libs/polarssl/include/polarssl/padlock.h
        libs/polarssl/include/polarssl/platform.h
        libs/polarssl/include/polarssl/sha512.h
        libs/polarssl/include/polarssl/timing.h
        libs/polarssl/src/aes.c
        libs/polarssl/src/aesni.c
        libs/polarssl/src/bignum.c
        libs/polarssl/src/ctr_drbg.c
        libs/polarssl/src/ecp.c
        libs/polarssl/src/ecp_curves.c
        libs/polarssl/src/entropy.c
        libs/polarssl/src/entropy_poll.c
        libs/polarssl/src/miosix_poll.cc
        libs/polarssl/src/net.c
        libs/polarssl/src/platform.c
        libs/polarssl/src/sha512.c
        libs/polarssl/src/timing.c
        libs/sban/include/sban/bd1.h
        libs/sban/include/sban/bd2.h
        libs/sban/include/sban/common.h
        libs/sban/include/sban/gdh2.h
        libs/sban/include/sban/KnxTelegram.h
        libs/sban/include/sban/KnxTpUart.h
        libs/sban/include/sban/mka.h
        libs/sban/include/sban/util.h
        libs/sban/src/bd1.c
        libs/sban/src/bd2.c
        libs/sban/src/gdh2.c
        libs/sban/src/mka.c
        libs/sban/src/util.c
        libs/tiny-AES-c-master/aes.c
        libs/tiny-AES-c-master/aes.h
        libs/tiny-AES-c-master/aes.hpp
        src/shared/knx/backend/backend.h
        src/shared/knx/backend/linux-tcp.h
        src/shared/knx/crypto/crypto.h
        src/shared/knx/crypto/dummy.h
        src/shared/knx/crypto/mka.h
        src/shared/knx/crypto/policies.h
        src/shared/knx/nodecounter/counter.h
        src/shared/knx/nodecounter/dummy.h
        src/shared/knx/common.h
        src/shared/knx/config.h
        src/shared/knx/debug.h
        src/shared/knx/knx.h
        src/shared/knx/multirings.h
        src/shared/knx/pktwrapper.h
        src/shared/knx/ringbuffer.h
        src/shared/knx/telegram.h
        src/shared/knx/timing.h
        tests/x86/new/common.h
        tests/x86/new/client.cc)